--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   .legend{display:flex;align-items:center;gap:8px;font-size:12px;color:#333;margin-top:6px}
   .sw{width:14px;height:10px;border-radius:3px;border:1px solid #999}
   .row2{display:grid;grid-template-columns:1fr;grid-auto-rows:auto;row-gap:4px;align-items:start}
-  .subtle{color:#666;font-size:12px;justify-self:end;text-align:right;white-space:normal;overflow-wrap:anywhere;word-break:break-word;hyphens:auto;max-width:100%}
+  .subtle{color:#666;font-size:12px;justify-self:end;text-align:right;white-space:normal;overflow-wrap:anywhere;word-break:break-word;hyphens:auto;max-width:100%;display:block}
   .testbar{margin-top:10px;display:flex;gap:8px;align-items:center}
   pre#testsOut{background:#fafafa;border:1px solid #eee;border-radius:8px;padding:10px;max-height:260px;overflow:auto;font-size:12px}
   .rangeRow{display:grid;grid-template-columns:minmax(0,1fr) 80px;gap:8px;align-items:center;width:100%;}
@@ -211,7 +211,8 @@
       }
     }
   }
-  function setStatus(txt){ ensureStatusElements(); if(statusEl){ statusEl.textContent = txt; ensureStatusElements(); } }
+  function setStatus(txt){ ensureStatusElements(); if(statusEl){ statusEl.textContent = txt; } }
+  function setStatusHTML(html){ ensureStatusElements(); if(statusEl){ statusEl.innerHTML = html; defScaleLbl = el('defScaleLbl') || defScaleLbl; } }
   function safeSetDefScaleLabel(text){ ensureStatusElements(); if(defScaleLbl){ defScaleLbl.textContent = text; } }
 
   let ctxPrev = null, ctx = null;
@@ -365,7 +366,7 @@
           lastFE = res; // cache
           drawResults(res);
           const rng = valueRange(res.shearValsRZ||[]);
-          setStatus(`ΔT=${fmt(approx.dT)}°, s_r≈${fmt(approx.s_r)}, s_z≈${fmt(approx.s_z)} • Strain range: ${isFinite(rng.min)?fmt(rng.min):'—'} … ${isFinite(rng.max)?fmt(rng.max):'—'} • Defl scale: ${(+inp.defScale).toFixed(2).replace(/\.00$/, '')}×`);
+          setStatusHTML(`ΔT=${fmt(approx.dT)}°, s_r≈${fmt(approx.s_r)}, s_z≈${fmt(approx.s_z)}<br>Strain range: ${isFinite(rng.min)?fmt(rng.min):'—'} … ${isFinite(rng.max)?fmt(rng.max):'—'} • Defl scale: <span id="defScaleLbl">${(+inp.defScale).toFixed(2).replace(/\.00$/, '')}×</span>`);
           setSolveState('done');
         }catch(err){ console.error(err); setStatus('Error: ' + (err && err.message ? err.message : err)); setSolveState('error', err && err.message); }
       }, 0);
@@ -672,6 +673,7 @@
 </script>
 </body>
 </html>
+
 
 
 
