--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
   .btn{background:var(--accent);color:#fff;border:none;cursor:pointer;font-weight:600}
   .btn:active{transform:translateY(1px)}
   .note{font-size:12px;color:var(--muted)}
-  canvas{background:#fff;border:1px solid var(--border);border-radius:12px}
+  canvas{background:#fff;border:1px solid var(--border);border-radius:12px; width:auto; height:auto; display:block}
   .hide{display:none}
   .subsec{margin-left:0}
-  .legend{display:flex;align-items:center;gap:8px;font-size:12px;color:#333;margin-top:6px}
+  .legend{display:flex;align-items:center;gap:8px;font-size:12px;color:#333;margin-top:6px;flex-wrap:wrap;max-width:645px}
   .sw{width:14px;height:10px;border-radius:3px;border:1px solid #999}
   .row2{display:grid;grid-template-columns:1fr;grid-auto-rows:auto;row-gap:4px;align-items:start}
   .subtle{color:#666;font-size:12px;justify-self:end;text-align:right;white-space:normal;overflow-wrap:anywhere;word-break:break-word;hyphens:auto;max-width:100%;display:block}
@@ -50,7 +50,7 @@
 </style>
 </head>
 <body>
-  <h2>Bonded Rubber — Axisymmetric r–z Overlay (Linear Thermal FEM)</h2>
+  <h2>Rubber Pad - Molded Skrinkage</h2>
   <div class="row">
     <div class="panel" id="inputs">
       <div class="actionBar">
@@ -128,19 +128,18 @@
       </div>
 
       <div class="group"></div>
-
       <div class="group"></div>
       
     </div>
 
-    <div class="panel" style="flex:1;min-width:420px">
+    <div class="panel panel-right" style="flex:0 0 auto;min-width:0;width:calc(645px + 2*var(--pad));max-width:calc(645px + 2*var(--pad))">
       <div class="hdr">Original geometry (live preview, full −r…+r)</div>
-      <div class="canvasWrap" style="margin-bottom:10px">
+      <div class="canvasWrap" style="margin-bottom:10px;width:645px">
         <canvas id="cvPrev" width="645" height="240" aria-label="Original geometry preview"></canvas>
       </div>
 
       <div class="hdr">Solved overlay: BEFORE (blue) + AFTER (red) in r–z</div>
-      <div class="canvasWrap">
+      <div class="canvasWrap" style="width:645px">
         <div id="solveBadge" class="solveBadge" aria-live="polite">Ready</div>
         <canvas id="cv" width="645" height="380" aria-label="Solved after-shape with shear"></canvas>
       </div>
@@ -184,6 +183,9 @@
   const cv = el('cv');
   let statusEl = el('status');
   const badge = el('solveBadge');
+
+  // Fixed canvas size (attribute width/height). No responsive resizing.
+  function fitCanvases(){ /* no-op: keep 645px */ }
 
   // Guarded setters --------------------------------------------------------
   function ensureStatusElements(){ /* status removed */ }
@@ -644,11 +646,14 @@
   scrubEscapedLabelArtifacts();
   updateDefScaleLabel();
   setSolveState('ready');
+  fitCanvases();
   drawPreview();
+  redrawResults();
 })();
 </script>
 </body>
 </html>
+
 
 
 
