--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
 </style>
 </head>
 <body>
-  <h2>Bonded Rubber — Axisymmetric r–z Overlay (Linear Thermal FEM)</h2>
+  <h2>Rubber Disk - Molding Shrinkage</h2>
   <div class="row">
     <div class="panel" id="inputs">
       <div class="actionBar">
-        <button class="btn" id="moldBtn">MOLD IT</button>
+        <button class="btn" id="moldBtn">Shrinkage</button>
         <small>Build FE model and solve cooling shrinkage</small>
       </div>
 
