--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 </style>
 </head>
 <body>
-  <h2>Rubber Disk - Molding Shrinkage</h2>
+  <h2>Disk - Molding Shrinkage</h2>
   <div class="row">
     <div class="panel" id="inputs">
       <div class="actionBar">
