--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 </style>
 </head>
 <body>
-  <h2>Bonded Rubber — Axisymmetric r–z Overlay (Linear Thermal FEM)</h2>
+  <h2>Bonded Rubber Disk — Molding Shrinkage and Shear Strains</h2>
   <div class="row">
     <div class="panel" id="inputs">
       <div class="actionBar">
